# thor-probe

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  install.sh
.github/workflows/: ci.yml
examples/: run_with_timeout.py
schema/: thor_probe_output.schema.json
src/communis/: config.cpp  config.h  cuda_check.h  json_util.h  json_writer.h  log.h  ring_buffer.h  spec_reference.cpp  spec_reference.h  tempus.h  thor.cpp  thor.h  timeline_logger.cpp  timeline_logger.h
src/thor_probe/: CMakeLists.txt
src/thor_probe/include/: benchmark.h  cpu_probe.h  gpu_probe.h  multimedia_probe.h  probe_schema.h  system_probe.h  telemetry.h
src/thor_probe/src/: probe_main.cpp
src/thor_probe/src/cpu/: cpu_probe.cpp
src/thor_probe/src/gpu/: deep_sm_probe.cu  deep_sm_probe.h  device_props.cpp  device_props.h  tc_probe.h  tc_probe_cu.cu
src/thor_probe/src/multimedia/: isp.cpp  isp.h  nvdec.cpp  nvdec.h  nvenc.cpp  nvenc.h  nvjpeg.cpp  nvjpeg.h  ofa.cpp  ofa.h  pva.cpp  pva.h  vic.cpp  vic.h
src/thor_probe/src/output/: json_serializer.cpp  json_serializer.h  text_formatter.cpp  text_formatter.h
src/thor_probe/src/system/: display.cpp  display.h  memory.cpp  memory.h  network.cpp  network.h  pcie.cpp  pcie.h
src/thor_probe/src/telemetry/: sysfs_source.cpp  sysfs_source.h  tegrastats_source.cpp  tegrastats_source.h  telemetry_manager.cpp  telemetry_manager.h
tests/: CMakeLists.txt  test_config.cpp  test_json_writer.cpp  test_ring_buffer.cpp  test_spec_reference.cpp  test_tempus.cpp
tools/: validate_json_output.sh
